# ai_project_python

./: README.md
newfrom_ai_python/: .gitignore  README.md  pyproject.toml  start.py
newfrom_ai_python/src/: main.py
newfrom_ai_python/src/config/: dbConfig.py  redisConfig.py  sessionConfig.py
newfrom_ai_python/src/db/crud/: aiCrud.py
newfrom_ai_python/src/db/models/: aiModel.py
newfrom_ai_python/src/db/schema/: aiSchema.py
newfrom_ai_python/src/exception/: validation.py
newfrom_ai_python/src/routers/: apiRouter.py
newfrom_ai_python/src/service/: aiLearnService.py  apiService.py  openaiService.py  s3Service.py
newfrom_ai_python/src/utils/: calcUtil.py  cookieUtil.py  pdfUtil.py  sessionUtil.py
